objects/Cloud_Forecast_Quarter__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clone_PESS_Lines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone PESS Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Week__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Week__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Week</label>
        <referenceTo>Cloud_Forecast_Quarter__c</referenceTo>
        <relationshipLabel>Cloud Forecast Quarter</relationshipLabel>
        <relationshipName>Cloud_Forecast_Quarter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_Date__c</fullName>
        <label>Week Date</label>
        <type>Date</type>
    </fields>
    <label>Cloud Forecast Quarter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Active__c</columns>
        <columns>Current_Week__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cloud Forecast Quarter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Forecast Quarter</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>